--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:27.+'
     implementation 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.android.volley:volley:1.0.0'
+    implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
+    compile 'gun0912.ted:tedpermission:2.1.1'
 }
