--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     compile 'com.android.volley:volley:1.0.0'
     implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
     compile 'gun0912.ted:tedpermission:2.1.1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
