--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,24 +53,21 @@
         <activity android:name=".activity.SettingsActivity"
             android:screenOrientation="userPortrait"/>
 
-        <service
-            android:name=".FCM.MyFirebaseMessagingService"
+        <service android:name=".FCM.MyFirebaseMessagingService"
             android:enabled="true"
-            android:exported="true">
+            android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-        <service
-            android:name=".FCM.MyFirebaseInstanceIDService"
+        <service android:name=".FCM.MyFirebaseInstanceIDService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
         </service>
-        <service
-            android:name=".FCM.DeleteTokenService"
-            android:exported="false" />
+        <service android:name=".FCM.DeleteTokenService"
+            android:exported="false"/>
 
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
