--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.google.firebase:firebase-auth:16.0.4'
     implementation 'com.google.firebase:firebase-messaging:17.3.3'
+    implementation 'com.amitshekhar.android:android-networking:1.0.2'
 
 
 }
