--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -69,16 +69,16 @@
         <service android:name=".FCM.DeleteTokenService"
             android:exported="false"/>
 
-       <!-- <meta-data
+        <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
-            android:resource="@drawable/ic_launcher_foreground" />
-        &lt;!&ndash;
+            android:resource="@drawable/app_icon" />
+        <!--
              Set color used with incoming notification messages. This is used when no color is set for the incoming
              notification message. See README(https://goo.gl/6BKBk7) for more.
-        &ndash;&gt;
+        -->
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_color"
-            android:resource="@color/colorAccent" />-->
+            android:resource="@color/colorAccent" />
 
         <provider
             android:name="android.support.v4.content.FileProvider"
